# KickCAT

./: CMakeLists.txt
include/kickcat/: Bus.h  DebugHelpers.h  Diagnostics.h  Error.h  Time.h
src/: Bus.cc  Diagnostics.cc  Time.cc
tools/: CMakeLists.txt  config.json  debugExample.cc  scanTopology.cc
tools/moveElmo/: CANOpen.h  CANOpenStateMachine.h  Error.h  detectCRC.cc  detectEMG.cc  moveElmo.cc
unit/: debug-t.cc  link-t.cc
